# tokctl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
benches/: parse.rs
docs/: architecture.md
examples/: bench_refresh.rs
openspec/specs/cache-store/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/file-discovery/: spec.md
openspec/specs/in-memory-reports/: spec.md
openspec/specs/ingest-perf/: spec.md
src/: cli.rs  cli.ts  compare.rs  cursor_sync.rs  dates.rs  dates.ts  demo.rs  discovery.rs  doctor.rs  lib.rs  main.rs  paths.rs  paths.ts  pricing.rs  pricing.ts  render.rs  render.ts  repo.rs  test_support.rs  types.rs  types.ts
src/cli/: pipeline.rs  workflows.rs
src/doctor/: checks.rs  mod.rs  render.rs
src/ingest/: fileRange.ts  file_range.rs  mod.rs  plan.rs  plan.ts  run.rs  run.ts
src/legacy/: inMemory.ts  in_memory.rs
src/reports/: daily.ts  in_memory.rs  monthly.ts  session.ts  shared.ts
src/sources/: claude-parse.ts  claude.rs  claude.ts  codex-parse.ts  codex.rs  codex.ts  cursor.rs  mod.rs
src/store/: db.rs  db.ts  mod.rs  path.ts  queries.rs  queries.ts  rowTypes.ts  schema.rs  schema.ts  writes.rs  writes.ts
src/tui/: cache.rs  data.rs  format.rs  input.rs  keys.rs  load.rs  load_tests.rs  mod.rs  rows.rs  shell.rs  state.rs  theme.rs  view.rs  view_tests.rs
test/: e2e.test.ts  paths.test.ts  plan.test.ts  pricing.test.ts  reports.test.ts  sources.test.ts  store.test.ts
tests/: cli_behavior.rs  report_parity.rs
(+34 files in other folders)
