[package]
name = "tokctl"
version = "0.1.0"
edition = "2021"
description = "Local-only CLI that reports token usage and cost across Claude Code, Claude Desktop, Codex CLI, and Codex Desktop."
license = "MIT"
repository = "https://github.com/adamthuvesen/tokctl"
rust-version = "1.75"

[[bin]]
name = "tokctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
comfy-table = "7"
walkdir = "2"
rayon = "1"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
